force-app/main/default/objects/FiveNineResource__mdt/FiveNineResource__mdt.object-meta.xml
<CustomObject>
    <description>Grouping Five9 Service configuration</description>
    <label>Five9 Resource</label>
    <pluralLabel>Five9 Resources</pluralLabel>
</CustomObject>