force-app/main/default/objects/FiveNineResource__mdt/fields/BaseURL__c.field-meta.xml
<CustomField>
    <fullName>BaseURL__c</fullName>
    <label>Base URL</label>
    <length>80</length>
    <type>Text</type>
</CustomField>