force-app/main/default/objects/FiveNineResource__mdt/fields/ResourceURL__c.field-meta.xml
<CustomField>
    <fullName>ResourceURL__c</fullName>
    <label>Resource URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>