force-app/main/default/objects/FiveNineResource__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>NamespacePrefix</columns>
    <columns>BaseURL__c</columns>
    <columns>Protocol__c</columns>
    <columns>ResourceURL__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>